[package]
name = "str_utils"
version = "0.6.2"
authors = ["Dany Laporte <dany_laporte@hotmail.com>"]
edition = "2021"
publish = false

[dependencies]
serde = { version = "1", optional = true }
unidecode = "0.3"

[dev-dependencies]
criterion = "0.5"
serde = { version = "1" }
serde_json = { version = "1" }

[build-dependencies]
unicode-normalization = "0.1"

[[bench]]
name = "eq_ext"
harness = false
